--- a/views/plantilla.pug
+++ b/views/plantilla.pug
@@ -90,7 +90,7 @@ block contenido
                                         when 1
                                             a.font-weight-bold.text-uppercase.text-success(href='/info-cliente?id_vehiculo='+data.historial[i].id_vehiculo+'&placa='+data.historial[i].placa+'') #{data.historial[i].placa}
                                         when 2
-                                            a.font-weight-bold.text-uppercase.text-danger(href='/info-cliente?id_vehiculo='+data.historial[i].id_vehiculo+'&placa='+data.historial[i].placa+'') #{data.historial[i].placa}
+                                            a.font-weight-bold.text-uppercase.text-info(href='/info-cliente?id_vehiculo='+data.historial[i].id_vehiculo+'&placa='+data.historial[i].placa+'') #{data.historial[i].placa}
                                         when 3
                                             a.font-weight-bold.text-uppercase.text-warning(href='/info-cliente?id_vehiculo='+data.historial[i].id_vehiculo+'&placa='+data.historial[i].placa+'') #{data.historial[i].placa} 
                                         default
