algo innecesario pero necesario x4

--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -237,7 +237,7 @@ script.
                     pId_detallePedido[index],pId_Tipo_Usuario,id_notificacion[index],vehiculo[index])
                 }
             }else{
-                for (let index = 0; index <= nro_Notificaciones.length-1; index++) {
+                for (let index = 0; index <= nombre.length-1; index++) {
                     if(index > 3){
                         $('#NotiDropDown').css("height","304px");
                         console.log('si cumple')
