Solucion a consulta DNI

--- a/views/formAddCliente.pug
+++ b/views/formAddCliente.pug
@@ -1040,7 +1040,7 @@ block area-scripts
                             $('#nombre_cliente').val('');
                             $('#lbnombre').removeClass("active");
                             $('#iconombre').removeClass("active");
-                            alert(data)                         // caso que no encuentre el DNI
+                            alert("DNI Incorrecto")                        // caso que no encuentre el DNI
                         }  
                     }else{
                         $('#lbnombre').removeClass("active");
