Mejora del Historial

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -21,7 +21,7 @@ html(lang='es')
         //-jquery bootstrap-datepicker-1.9.0-dist
         script(type='text/javascript', src='lib/jquery 3.4.1/dist/jquery.min.js')
         //- Jqueri ui styles
-        //link(href='lib/jquery-ui-1.12.1.custom/jquery-ui.css',rel='stylesheet')
+        link(href='lib/jquery-ui-1.12.1.custom/jquery-ui.css',rel='stylesheet')
         link(href='lib/bootstrap-datepicker-1.9.0-dist/css/bootstrap-datepicker.min.css',rel='stylesheet')
         //-link(href='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/css/mdb.min.css', rel='stylesheet')
         //-Font Awesome
@@ -52,7 +52,7 @@ html(lang='es')
     script(src='lib/MDBootstrap 4.8.7/js/mdb.min.js')
     //-script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/js/mdb.min.js')
     //-Bootstrap datapicker
-    //script(src='lib/bootstrap-datepicker-1.9.0-dist/js/bootstrap-datepicker.min.js')
+    script(src='lib/bootstrap-datepicker-1.9.0-dist/js/bootstrap-datepicker.min.js')
   block area-scripts
 
 
