--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -131,6 +131,8 @@ nav.jose.navbar.navbar-expand-lg.navbar-dark
                         when 2
                             li.nav-item
                                 a.nav-link(href='/consultar') Crear Visita
+                            li.nav-item
+                                a.nav-link(href='/ordenes-hoy') Ordenes de Hoy
                     li.nav-item
                         a.nav-link(href='/historial') Historial
                     li.nav-item.dropdown
